--- a/public/index.html
+++ b/public/index.html
@@ -1,119 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat em Tempo Real</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f7f7f7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .chat-container {
-            width: 400px;
-            height: 600px;
-            background: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-        .messages {
-            flex: 1;
-            overflow-y: auto;
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-        }
-        .message {
-            margin: 5px 0;
-            padding: 8px 12px;
-            background: #e0e0e0;
-            border-radius: 8px;
-            max-width: 70%;
-        }
-        .message.mine {
-            background: #4caf50;
-            color: white;
-            align-self: flex-end;
-        }
-        .typing {
-            font-style: italic;
-            color: #888;
-            padding: 5px 10px;
-        }
-        .input-container {
-            display: flex;
-            padding: 10px;
-            background: #f1f1f1;
-            border-top: 1px solid #ddd;
-        }
-        .input-container input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-        .input-container button {
-            padding: 10px 20px;
-            border: none;
-            background: #4caf50;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+        body { font-family: Arial, sans-serif; background-color: #121212; color: white; padding: 20px; }
+        #messages { list-style-type: none; padding: 0; }
+        #messages li { padding: 8px; background-color: #1e1e1e; margin-bottom: 10px; border-radius: 5px; }
+        #typing { color: #aaaaaa; font-style: italic; }
+        input { padding: 10px; width: calc(100% - 22px); margin-top: 10px; }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="messages" id="messages"></div>
-        <div class="typing" id="typing"></div>
-        <div class="input-container">
-            <input type="text" id="messageInput" placeholder="Escreve a tua mensagem...">
-            <button id="sendButton">Enviar</button>
-        </div>
-    </div>
+    <h2>Chat em Tempo Real</h2>
+    <ul id="messages"></ul>
+    <p id="typing"></p>
+    <input id="name" placeholder="Teu Nome" />
+    <input id="m" autocomplete="off" placeholder="Escreve a tua mensagem..." />
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
-        const messagesDiv = document.getElementById("messages");
-        const typingDiv = document.getElementById("typing");
-        const messageInput = document.getElementById("messageInput");
-        const sendButton = document.getElementById("sendButton");
+        const nameInput = document.getElementById('name');
+        const messageInput = document.getElementById('m');
+        const messagesList = document.getElementById('messages');
+        const typingDisplay = document.getElementById('typing');
 
-        let username = prompt("Qual é o teu nome?");
-        socket.emit("digitando", `${username} entrou no chat`);
-
-        messageInput.addEventListener("input", () => {
-            socket.emit("digitando", `${username} está a escrever...`);
+        messageInput.addEventListener('input', () => {
+            const name = nameInput.value || 'Anónimo';
+            socket.emit('typing', name);
         });
 
-        sendButton.addEventListener("click", () => {
-            const text = messageInput.value;
-            if (text.trim() !== "") {
-                socket.emit("mensagem", { username, text });
-                messageInput.value = "";
+        document.querySelector('input#name').addEventListener('input', () => {
+            typingDisplay.textContent = '';
+        });
+
+        document.querySelector('input#m').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                const name = nameInput.value || 'Anónimo';
+                const message = messageInput.value;
+                if (message.trim()) {
+                    socket.emit('chat message', { name, message });
+                    messageInput.value = '';
+                }
             }
         });
 
-        socket.on("mensagem", (data) => {
-            const messageDiv = document.createElement("div");
-            messageDiv.classList.add("message");
-            if (data.username === username) messageDiv.classList.add("mine");
-            messageDiv.textContent = `${data.username}: ${data.text}`;
-            messagesDiv.appendChild(messageDiv);
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
-            typingDiv.textContent = "";
+        socket.on('chat message', (data) => {
+            const item = document.createElement('li');
+            item.textContent = `${data.name}: ${data.message}`;
+            messagesList.appendChild(item);
+            typingDisplay.textContent = '';
+            window.scrollTo(0, document.body.scrollHeight);
         });
 
-        socket.on("digitando", (user) => {
-            typingDiv.textContent = user;
+        socket.on('typing', (name) => {
+            typingDisplay.textContent = `${name} está a escrever...`;
+            setTimeout(() => typingDisplay.textContent = '', 3000);
         });
     </script>
 </body>
