--- a/index.html
+++ b/index.html
@@ -1,144 +1,126 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat em Tempo Real</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-
-    .chat-container {
-      width: 400px;
-      margin: 50px auto;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    #user-form {
-      text-align: center;
-    }
-
-    #name {
-      padding: 10px;
-      width: 100%;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    #join-btn {
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    #join-btn:hover {
-      background-color: #45a049;
-    }
-
-    .chat-box {
-      display: none;
-    }
-
-    #messages {
-      max-height: 300px;
-      overflow-y: auto;
-      margin-bottom: 10px;
-    }
-
-    #message-input {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    #typing-notification {
-      font-style: italic;
-      color: #888;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat Romântico em Tempo Real</title>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #ff758c, #ff7eb3);
+            text-align: center;
+            color: white;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            width: 90%;
+            max-width: 400px;
+            margin: auto;
+            background: white;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        h1 {
+            color: #ff3366;
+        }
+        .chat-box {
+            height: 300px;
+            overflow-y: auto;
+            border: 2px solid #ff3366;
+            padding: 10px;
+            border-radius: 5px;
+            background: #fff0f5;
+            color: black;
+            margin-bottom: 10px;
+        }
+        input {
+            width: 70%;
+            padding: 10px;
+            border: 2px solid #ff3366;
+            border-radius: 5px;
+            margin-right: 5px;
+        }
+        button {
+            background: #ff3366;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background: #ff1a4b;
+        }
+        .typing {
+            font-style: italic;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div id="user-form">
-      <input type="text" id="name" placeholder="Digite seu nome">
-      <button id="join-btn">Entrar</button>
+    <div class="container">
+        <h1>💖 Chat do Amor 💖</h1>
+        <input type="text" id="name-input" placeholder="Escreve o teu nome..." autofocus>
+        <button onclick="setName()">Entrar</button>
+        <div id="chat-container" style="display: none;">
+            <div class="chat-box" id="chat-box"></div>
+            <p class="typing" id="typing" style="display: none;"></p>
+            <input type="text" id="message-input" placeholder="Escreve a tua mensagem...">
+            <button onclick="sendMessage()">Enviar 💌</button>
+        </div>
     </div>
 
-    <div id="chat-box" class="chat-box">
-      <div id="messages"></div>
-      <input type="text" id="message-input" placeholder="Digite sua mensagem..." disabled>
-    </div>
+    <script>
+        const socket = io();
+        let userName = "";
 
-    <div id="typing-notification"></div>
-  </div>
+        function setName() {
+            userName = document.getElementById("name-input").value.trim();
+            if (userName) {
+                document.getElementById("name-input").style.display = "none";
+                document.querySelector("button").style.display = "none";
+                document.getElementById("chat-container").style.display = "block";
+                socket.emit("setName", userName);
+            }
+        }
 
-  <script src="https://cdn.socket.io/4.1.3/socket.io.min.js"></script>
-  <script>
-    const socket = io();
-    let username = '';
+        function sendMessage() {
+            const messageInput = document.getElementById("message-input");
+            const message = messageInput.value.trim();
 
-    document.getElementById('join-btn').onclick = () => {
-      username = document.getElementById('name').value;
-      if (username) {
-        socket.emit('new-user', username);
-        document.getElementById('user-form').style.display = 'none';
-        document.getElementById('chat-box').style.display = 'block';
-        document.getElementById('message-input').disabled = false;
-      }
-    };
+            if (message) {
+                socket.emit("message", message);
+                messageInput.value = "";
+                socket.emit("stopTyping");
+            }
+        }
 
-    // Enviar mensagem
-    document.getElementById('message-input').addEventListener('input', () => {
-      socket.emit('typing', username);
-    });
+        document.getElementById("message-input").addEventListener("input", () => {
+            socket.emit("typing");
+            setTimeout(() => socket.emit("stopTyping"), 2000);
+        });
 
-    document.getElementById('message-input').addEventListener('keypress', (e) => {
-      if (e.which === 13) { // Enviar mensagem ao pressionar Enter
-        const message = document.getElementById('message-input').value;
-        socket.emit('chat-message', message);
-        document.getElementById('message-input').value = '';
-      }
-    });
+        socket.on("message", (message) => {
+            const chatBox = document.getElementById("chat-box");
+            const messageElement = document.createElement("div");
+            messageElement.textContent = message;
+            chatBox.appendChild(messageElement);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        });
 
-    // Receber mensagens
-    socket.on('chat-message', (msg) => {
-      const messageElement = document.createElement('p');
-      messageElement.textContent = msg;
-      document.getElementById('messages').appendChild(messageElement);
-      document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight; // Rolar até a última mensagem
-    });
+        socket.on("typing", (name) => {
+            const typingElement = document.getElementById("typing");
+            typingElement.textContent = name;
+            typingElement.style.display = "block";
+        });
 
-    // Exibir "digitando..."
-    socket.on('typing', (name) => {
-      document.getElementById('typing-notification').textContent = `${name} está digitando...`;
-      clearTimeout(typingTimeout);
-      typingTimeout = setTimeout(() => {
-        document.getElementById('typing-notification').textContent = '';
-      }, 1000);
-    });
-
-    let typingTimeout;
-
-    // Conectar ao servidor
-    socket.on('connect', () => {
-      console.log('Conectado ao servidor!');
-    });
-
-    socket.on('disconnect', () => {
-      console.log('Desconectado do servidor!');
-    });
-  </script>
+        socket.on("stopTyping", () => {
+            document.getElementById("typing").style.display = "none";
+        });
+    </script>
 </body>
 </html>
